--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "express": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "node-osc": "9.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
