--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "type": "module",
   "dependencies": {
     "express": "^5.1.0",
-    "socket.io": "^4.8.1",
-    "node-osc": "9.1.3"
+    "node-osc": "^9.1.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
